# LREC-Operator

app/: build.gradle  codemagic.yaml
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  lrec_engine.cpp
app/src/main/java/com/lrec/operator/: G711Codec.kt  LrecAudioPlayer.kt  LrecAviParser.kt  LrecChatManager.kt  LrecEngine.kt  LrecFormatDetector.kt  LrecGLSurface.kt  LrecParser.kt  LrecPlayerActivity.kt  LrecVideoDecoder.kt  MainActivity.kt  VideoLibraryActivity.kt
app/src/main/res/drawable/: Bg progress fill brightness · XML  bg_duration_tag.xml  bg_list_item.xml  bg_video_card.xml  ic_brightness.xml  ic_chat.xml  ic_pause.xml  ic_play.xml  ic_rewind.xml  ic_speed.xml  ic_theme.xml
app/src/main/res/layout/: activity_library.xml  activity_lrec_player.xml  activity_main.xml  activity_settings.xml  activity_splash.xml  item_chat_message.xml  item_folder.xml  item_video_row.xml
app/src/main/res/menu/: drawer_menu.xml  library_menu.xml  player_menu.xml
app/src/main/res/values/: colors.xml  themes.xml
app/src/main/res/values-en/: strings.xml
app/src/main/res/values-night/: colors.xml
